# weekly-challenge

./: .gitignore  README.md
challenges/003/: solutions.md
challenges/004/: solutions.md
challenges/005/: solutions.md
challenges/006/: solutions.md
challenges/007/: solutions.md
challenges/008/: solutions.md
challenges/009/: solutions.md
challenges/010/: solutions.md
challenges/011/: solutions.md
challenges/012/: solutions.md
challenges/binarytree/andreas/: Tree.hs
challenges/binarytree/andreas/haskell/: tree.cabal
challenges/binarytree/andreas/haskell/src/: Tree.hs  tests.hs
challenges/binarytree/ben/: binarytree.py  tests.py
challenges/binarytree/norman/: index.js  package.json
challenges/binarytree/norman/src/: Node.js  Tree.js
challenges/binarytree/norman/tests/: node.js  tree.js
challenges/binarytree/steph/: main.go
challenges/binarytree/steph/node/: node.go
challenges/binarytree/ute/: binary_tree.py  tests.py
