name:                tree
version:             0.1.0.0
synopsis:            Binary Tree
license:             PublicDomain
author:              Andreas Hug
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Tree
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  build-depends:       base >=4.8 && <4.9,
                       HUnit
  hs-source-dirs:      src
  default-language:    Haskell2010
